# esp-bsp

bsp/esp32_s3_korvo_2/: CMakeLists.txt  idf_component.yml
bsp/esp32_s3_korvo_2/include/bsp/: esp32_s3_korvo_2.h
bsp/esp32_s3_korvo_2/src/: bsp_storage.c  espd_board_sdcard.c
components/esp_codec_dev/: idf_component.yml
components/esp_codec_dev/platform/: audio_codec_ctrl_i2c.c
